SeatSelectionGenerator OfferSeat < 10 working with failure in offerseat availability check